force-app/main/default/objects/Customer__c/fields/METER_COUNT__c.field-meta.xml
<CustomField>
    <fullName>METER_COUNT__c</fullName>
    <label>METER COUNT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>