force-app/main/default/objects/Customer__c/fields/METER_NO__c.field-meta.xml
<CustomField>
    <fullName>METER_NO__c</fullName>
    <label>METER NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>