force-app/main/default/objects/Customer__c/fields/METER_TYPE__c.field-meta.xml
<CustomField>
    <fullName>METER_TYPE__c</fullName>
    <label>METER TYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>