force-app/main/default/objects/Customer__c/fields/METER_UNITS__c.field-meta.xml
<CustomField>
    <fullName>METER_UNITS__c</fullName>
    <label>METER UNITS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>