force-app/main/default/objects/Customer__c/fields/Multifamily__c.field-meta.xml
<CustomField>
    <fullName>Multifamily__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multifamily</label>
    <type>Checkbox</type>
</CustomField>