force-app/main/default/objects/Customer__c/fields/My_attic_have_ducts__c.field-meta.xml
<CustomField>
    <fullName>My_attic_have_ducts__c</fullName>
    <label>My attic have ducts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>