force-app/main/default/objects/Customer__c/fields/My_home_has_thermostats__c.field-meta.xml
<CustomField>
    <fullName>My_home_has_thermostats__c</fullName>
    <label>My home has thermostats</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>