force-app/main/default/objects/Customer__c/fields/My_home_was_built_in__c.field-meta.xml
<CustomField>
    <fullName>My_home_was_built_in__c</fullName>
    <label>My home was built in</label>
    <length>4</length>
    <type>Text</type>
</CustomField>