force-app/main/default/objects/Customer__c/fields/Name_fml__c.field-meta.xml
<CustomField>
    <fullName>Name_fml__c</fullName>
    <formula>UPPER(LEFT(First_Name__c, 1)) &amp;
LOWER(MID(First_Name__c, 2, LEN(First_Name__c))) +&apos; &apos;+UPPER(LEFT(Last_Name__c, 1)) &amp;
LOWER(MID(Last_Name__c, 2, LEN(Last_Name__c)))</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>