force-app/main/default/objects/Customer__c/fields/Number_Of_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Units__c</fullName>
    <label>Number Of Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>