force-app/main/default/objects/Customer__c/fields/OAP_Profile__c.field-meta.xml
<CustomField>
    <fullName>OAP_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OAP Profile</label>
    <type>Checkbox</type>
</CustomField>