force-app/main/default/objects/Customer__c/fields/OLD_ACCT_NO__c.field-meta.xml
<CustomField>
    <fullName>OLD_ACCT_NO__c</fullName>
    <label>OLD ACCT NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>