force-app/main/default/objects/Customer__c/fields/OTH_PROVIDERCODE__c.field-meta.xml
<CustomField>
    <fullName>OTH_PROVIDERCODE__c</fullName>
    <label>OTH PROVIDERCODE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IPL</fullName>
            </value>
            <value>
                <fullName>APCO</fullName>
            </value>
            <value>
                <fullName>AEP</fullName>
                <isActive>false</isActive>
                <label>AEP</label>
            </value>
            <value>
                <fullName>Alliant</fullName>
                <isActive>false</isActive>
                <label>Alliant</label>
            </value>
            <value>
                <fullName>COH</fullName>
                <isActive>false</isActive>
                <label>COH</label>
            </value>
            <value>
                <fullName>Consumers Energy</fullName>
                <isActive>false</isActive>
                <label>Consumers Energy</label>
            </value>
            <value>
                <fullName>DEO</fullName>
                <isActive>false</isActive>
                <label>DEO</label>
            </value>
            <value>
                <fullName>DTE</fullName>
                <isActive>false</isActive>
                <label>DTE</label>
            </value>
            <value>
                <fullName>Eversource</fullName>
                <isActive>false</isActive>
                <label>Eversource</label>
            </value>
            <value>
                <fullName>Eversource West</fullName>
                <isActive>false</isActive>
                <label>Eversource West</label>
            </value>
            <value>
                <fullName>MidAmerican</fullName>
                <isActive>false</isActive>
                <label>MidAmerican</label>
            </value>
            <value>
                <fullName>National Grid</fullName>
                <isActive>false</isActive>
                <label>National Grid</label>
            </value>
            <value>
                <fullName>Pull the Plug</fullName>
                <isActive>false</isActive>
                <label>Pull the Plug</label>
            </value>
            <value>
                <fullName>Vectren</fullName>
                <isActive>false</isActive>
                <label>Vectren</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>