force-app/main/default/objects/Customer__c/fields/OTH_RATECODE__c.field-meta.xml
<CustomField>
    <fullName>OTH_RATECODE__c</fullName>
    <label>OTH_RATECODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>