force-app/main/default/objects/Customer__c/fields/Other_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Decline_Reason__c</fullName>
    <label>Other Decline Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>