force-app/main/default/objects/Customer__c/fields/Parent_Customer__c.field-meta.xml
<CustomField>
    <fullName>Parent_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Child Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>