force-app/main/default/objects/Customer__c/fields/Parent_Premise__c.field-meta.xml
<CustomField>
    <fullName>Parent_Premise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Premise</label>
    <referenceTo>Premise__c</referenceTo>
    <relationshipLabel>Customers (Parent Premise)</relationshipLabel>
    <relationshipName>Customers1</relationshipName>
    <type>Lookup</type>
</CustomField>