force-app/main/default/objects/Customer__c/fields/PCR_Received__c.field-meta.xml
<CustomField>
    <fullName>PCR_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PCR Received</label>
    <type>Checkbox</type>
</CustomField>