force-app/main/default/objects/Customer__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Formula field to display Phone Number from Contact Object</description>
    <formula>Phone_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field to display Phone Number from Contact Object</inlineHelpText>
    <label>Phone</label>
    <type>Text</type>
</CustomField>