force-app/main/default/objects/Customer__c/fields/Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Phone_No__c</fullName>
    <label>Phone No</label>
    <type>Phone</type>
</CustomField>