force-app/main/default/objects/Customer__c/fields/PPL_External_Id__c.field-meta.xml
<CustomField>
    <fullName>PPL_External_Id__c</fullName>
    <label>PPL External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>