force-app/main/default/objects/Customer__c/fields/Premise__c.field-meta.xml
<CustomField>
    <fullName>Premise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Premise Object</description>
    <inlineHelpText>Lookup to Premise Object</inlineHelpText>
    <label>Premise</label>
    <referenceTo>Premise__c</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>