force-app/main/default/objects/Customer__c/fields/Premise_Id__c.field-meta.xml
<CustomField>
    <fullName>Premise_Id__c</fullName>
    <formula>Premise__r.Premise_Id__c</formula>
    <label>Premise Id</label>
    <type>Text</type>
</CustomField>