force-app/main/default/objects/Customer__c/fields/Premise_ID_txt__c.field-meta.xml
<CustomField>
    <fullName>Premise_ID_txt__c</fullName>
    <label>Premise ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>