force-app/main/default/objects/Customer__c/fields/Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email__c</fullName>
    <label>Primary Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>