force-app/main/default/objects/Customer__c/fields/PROJECT_PROGRAMID__c.field-meta.xml
<CustomField>
    <fullName>PROJECT_PROGRAMID__c</fullName>
    <label>PROJECT_PROGRAMID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>