force-app/main/default/objects/Customer__c/fields/PROJECT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>PROJECT_TYPE__c</fullName>
    <label>PROJECT TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assessment - Comprehensive</fullName>
            </value>
            <value>
                <fullName>Assessment - Quick</fullName>
            </value>
            <value>
                <fullName>Assessment - Specialty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>