force-app/main/default/objects/Customer__c/fields/Property_Management_Company__c.field-meta.xml
<CustomField>
    <fullName>Property_Management_Company__c</fullName>
    <label>Property Management Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>