force-app/main/default/objects/Customer__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single Family</fullName>
            </value>
            <value>
                <fullName>Townhome</fullName>
            </value>
            <value>
                <fullName>Condominium</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Triplex</fullName>
            </value>
            <value>
                <fullName>Quadruplex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>