force-app/main/default/objects/Customer__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IPL</fullName>
            </value>
            <value>
                <fullName>APCO</fullName>
            </value>
            <value>
                <fullName>BGE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>