force-app/main/default/objects/Customer__c/fields/purchase_an_ecobee4_smart_thermostat__c.field-meta.xml
<CustomField>
    <fullName>purchase_an_ecobee4_smart_thermostat__c</fullName>
    <label>purchase an ecobee4 smart thermostat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>