force-app/main/default/objects/Customer__c/fields/RATE_CODE__c.field-meta.xml
<CustomField>
    <fullName>RATE_CODE__c</fullName>
    <label>RATE CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>