force-app/main/default/objects/Customer__c/fields/READ_CYCLE__c.field-meta.xml
<CustomField>
    <fullName>READ_CYCLE__c</fullName>
    <label>READ CYCLE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>