force-app/main/default/objects/Customer__c/fields/Residence_Type__c.field-meta.xml
<CustomField>
    <fullName>Residence_Type__c</fullName>
    <label>Residence Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary Residence</fullName>
            </value>
            <value>
                <fullName>Second Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>