force-app/main/default/objects/Customer__c/fields/Retailer__c.field-meta.xml
<CustomField>
    <fullName>Retailer__c</fullName>
    <label>Retailer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>