force-app/main/default/objects/Customer__c/fields/Retailer_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Name_Formula__c</fullName>
    <formula>SUBSTITUTE( Retailer__c , &quot;&apos;&quot;, &quot;&quot;)</formula>
    <label>Retailer Name Formula</label>
    <type>Text</type>
</CustomField>