force-app/main/default/objects/Customer__c/fields/s_HPWH__c.field-meta.xml
<CustomField>
    <fullName>s_HPWH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>s HPWH</label>
    <type>Checkbox</type>
</CustomField>