force-app/main/default/objects/Customer__c/fields/SampleData__c.field-meta.xml
<CustomField>
    <fullName>SampleData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SampleData</label>
    <type>Checkbox</type>
</CustomField>