force-app/main/default/objects/Customer__c/fields/SampleId__c.field-meta.xml
<CustomField>
    <fullName>SampleId__c</fullName>
    <label>SampleId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>