force-app/main/default/objects/Customer__c/fields/SDGE_Customer_Confirmed_Retail_Override__c.field-meta.xml
<CustomField>
    <fullName>SDGE_Customer_Confirmed_Retail_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If we know that a customer received an override (and did not consume a real coupon), check this box</description>
    <inlineHelpText>If we know that a customer received an override (and did not consume a real coupon), check this box</inlineHelpText>
    <label>SDGE: Customer Confirmed Retail Override</label>
    <type>Checkbox</type>
</CustomField>