force-app/main/default/objects/Customer__c/fields/SDGE_Failed_Registration_Complete__c.field-meta.xml
<CustomField>
    <fullName>SDGE_Failed_Registration_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Failed Registration Complete</label>
    <type>Checkbox</type>
</CustomField>