force-app/main/default/objects/Customer__c/fields/Service_Account_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Account_First_Name__c</fullName>
    <label>Service Account First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>