force-app/main/default/objects/Customer__c/fields/Service_Account_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Account_Last_Name__c</fullName>
    <label>Service Account Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>