force-app/main/default/objects/Customer__c/fields/Service_Address2_Full__c.field-meta.xml
<CustomField>
    <fullName>Service_Address2_Full__c</fullName>
    <formula>Service_City__c + &apos;, &apos; +  TEXT(Service_State__c) + &apos; &apos; +  Service_Zipcode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Address2 Full</label>
    <type>Text</type>
</CustomField>