force-app/main/default/objects/Customer__c/fields/Service_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_2__c</fullName>
    <label>Service Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>