force-app/main/default/objects/Customer__c/fields/Service_Address_c__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_c__c</fullName>
    <label>Service_Address__c</label>
    <length>100</length>
    <type>Text</type>
</CustomField>