force-app/main/default/objects/Customer__c/fields/Service_Address_Cardinal_Direction__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_Cardinal_Direction__c</fullName>
    <label>Service Address - Cardinal Direction</label>
    <length>10</length>
    <type>Text</type>
</CustomField>