force-app/main/default/objects/Customer__c/fields/Service_Address_Full__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_Full__c</fullName>
    <formula>Service_Street_Number__c + &apos; &apos;+ Service_Street__c + &apos; &apos;+ Service_Street_Suffix__c+ &apos; &apos;+Service_Street_Misc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Address Full</label>
    <type>Text</type>
</CustomField>