force-app/main/default/objects/Customer__c/fields/Service_Address_Installation_Address__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_Installation_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Address = Installation Address ?</label>
    <type>Checkbox</type>
</CustomField>