force-app/main/default/objects/Customer__c/fields/Service_Address_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_Prefix__c</fullName>
    <label>Service Address – Prefix</label>
    <length>4</length>
    <type>Text</type>
</CustomField>