force-app/main/default/objects/Customer__c/fields/Service_Address_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_Suffix__c</fullName>
    <label>Service Address - Suffix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>