force-app/main/default/objects/Customer__c/fields/SERVICE_POINT_ID__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_POINT_ID__c</fullName>
    <label>SERVICE POINT ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>