force-app/main/default/objects/Customer__c/fields/Service_Point_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Point_Status__c</fullName>
    <label>Service Point Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>