force-app/main/default/objects/Customer__c/fields/Service_Street__c.field-meta.xml
<CustomField>
    <fullName>Service_Street__c</fullName>
    <label>Service Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>