force-app/main/default/objects/Customer__c/fields/SERVICE_UNIT__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_UNIT__c</fullName>
    <label>SERVICE UNIT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>