force-app/main/default/objects/Customer__c/fields/Service_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Service_Zipcode__c</fullName>
    <label>Service Zipcode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>