force-app/main/default/objects/Customer__c/fields/Shipping_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Account_Number__c</fullName>
    <label>Shipping Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>