force-app/main/default/objects/Customer__c/fields/Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_ID__c</fullName>
    <externalId>true</externalId>
    <label>Site ID</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>