force-app/main/default/objects/Customer__c/fields/Social_Security_Number_e__c.field-meta.xml
<CustomField>
    <fullName>Social_Security_Number_e__c</fullName>
    <inlineHelpText>Please enter the SSN as 888888888.</inlineHelpText>
    <label>Social Security Number (e)</label>
    <length>9</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>