force-app/main/default/objects/Customer__c/fields/SOLICIT__c.field-meta.xml
<CustomField>
    <fullName>SOLICIT__c</fullName>
    <label>SOLICIT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>