force-app/main/default/objects/Customer__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Formula field to display State from Premise Object</description>
    <formula>IF(ISBLANK( State_text__c),TEXT( Premise__r.State__c )  ,State_text__c)</formula>
    <inlineHelpText>Formula field to display State from Premise Object</inlineHelpText>
    <label>State</label>
    <type>Text</type>
</CustomField>