force-app/main/default/objects/Customer__c/fields/State_text__c.field-meta.xml
<CustomField>
    <fullName>State_text__c</fullName>
    <label>State_text</label>
    <length>10</length>
    <type>Text</type>
</CustomField>