force-app/main/default/objects/Customer__c/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <label>Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>