force-app/main/default/objects/Customer__c/fields/Tax_ID_e__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID_e__c</fullName>
    <inlineHelpText>Please enter the Tax ID as 888888888.</inlineHelpText>
    <label>Tax ID (e)</label>
    <length>10</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>