force-app/main/default/objects/Customer__c/fields/Tax_Status__c.field-meta.xml
<CustomField>
    <fullName>Tax_Status__c</fullName>
    <label>Tax Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Sole Proprietor</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>