force-app/main/default/objects/Customer__c/fields/Tenant_ID__c.field-meta.xml
<CustomField>
    <fullName>Tenant_ID__c</fullName>
    <label>Tenant ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>