force-app/main/default/objects/Customer__c/fields/Trade_Ally_Account__c.field-meta.xml
<CustomField>
    <fullName>Trade_Ally_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trade Ally Account</label>
    <referenceTo>Trade_Ally_Account__c</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>