force-app/main/default/objects/Customer__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>