force-app/main/default/objects/Customer__c/fields/USAGE_CHARGE__c.field-meta.xml
<CustomField>
    <fullName>USAGE_CHARGE__c</fullName>
    <label>USAGE CHARGE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>