force-app/main/default/objects/Customer__c/fields/USAGE_VALUE__c.field-meta.xml
<CustomField>
    <fullName>USAGE_VALUE__c</fullName>
    <label>USAGE VALUE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>