force-app/main/default/objects/Customer__c/fields/Used_to_control_central_air_conditioning__c.field-meta.xml
<CustomField>
    <fullName>Used_to_control_central_air_conditioning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used to control central air conditioning</label>
    <type>Checkbox</type>
</CustomField>