force-app/main/default/objects/Customer__c/fields/Used_to_control_gas_furnace__c.field-meta.xml
<CustomField>
    <fullName>Used_to_control_gas_furnace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used to control gas furnace</label>
    <type>Checkbox</type>
</CustomField>