force-app/main/default/objects/Customer__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customers (Utility)</relationshipLabel>
    <relationshipName>Customers1</relationshipName>
    <type>Lookup</type>
</CustomField>