force-app/main/default/objects/Customer__c/fields/Utility_Text__c.field-meta.xml
<CustomField>
    <fullName>Utility_Text__c</fullName>
    <label>Utility Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>