force-app/main/default/objects/Customer__c/fields/Valid_Customer__c.field-meta.xml
<CustomField>
    <fullName>Valid_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid Customer</label>
    <type>Checkbox</type>
</CustomField>