force-app/main/default/objects/Customer__c/fields/Verified_Address__c.field-meta.xml
<CustomField>
    <fullName>Verified_Address__c</fullName>
    <label>Verified Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>