force-app/main/default/objects/Customer__c/fields/Verified_City__c.field-meta.xml
<CustomField>
    <fullName>Verified_City__c</fullName>
    <label>Verified City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>